<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">計算年齡</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str1">請輸入出生年月日</string>
    <string name="str2">年(YYYY)</string>
    <string name="str3">月(MM)</string>
    <string name="str4">日(DD)</string>
    <string name="str5">計算結果</string>
    <drawable name="red">#FF0000</drawable>
    <drawable name="green">#00FF00</drawable>
    <string name="str6">您現在實際的年齡為</string>
	<string name="str7">歲</string>
</resources>
